--- a/Reset/reset.css
+++ b/Reset/reset.css
@@ -110,6 +110,12 @@ input {
     font-family: 'Mulish',
         sans-serif;
     outline: none;
+    transition: all 0.25s ease;
+}
+
+input[type="password"]:focus {
+    border: 1px solid #2B7A78;
+    outline: 1.2px solid #2B7A78;
 }
 
 .input-icon {
