--- a/Signup/signup.css
+++ b/Signup/signup.css
@@ -35,11 +35,16 @@ button {
     font-weight: 600;
     background: none;
     border: 1px solid #2B7A78;
-    color: #F5F5F5;
+    color: #2B7A78;
     padding: 0.5rem 1rem;
     text-align: center;
     border-radius: 0.5rem;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.25s linear;
+}
+
+header button:hover {
+    background: #2B7A78;
+    color: #F5F5F5;
 }
 
 .container {
@@ -61,10 +66,6 @@ section {
     width: 90%;
     background: #FEFEFE;
     border-radius: 1.9rem;
-}
-
-header button {
-    color: #2B7A78;
 }
 
 .flex {
@@ -178,6 +179,13 @@ input[type="checkbox"] {
     border-radius: .5rem;
     cursor: pointer;
     transform: translateY(4px);
+}
+
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="text"]:focus {
+    border: 1px solid #2B7A78;
+    outline: 1.2px solid #2B7A78;
 }
 
 .login-link {
