added landing page

--- a/Login/login.css
+++ b/Login/login.css
@@ -126,6 +126,10 @@ label {
     margin-bottom: .5rem;
 }
 
+.label {
+    margin-top: 1rem;
+}
+
 input {
     width: 100%;
     padding: .8rem 0 .8rem 3rem;
@@ -134,7 +138,6 @@ input {
     border-radius: .5rem;
     font-size: 1.125rem;
     color: #272727;
-    margin-bottom: 1rem;
     font-family: 'Mulish',
         sans-serif;
     outline: none;
@@ -156,6 +159,23 @@ input {
     display: none;
     cursor: pointer;
     left: 88%;
+}
+
+.error-message {
+    background: #F9C3B4;
+    color: #ED4A1F;
+    font-size: .95rem;
+    padding: .3rem .9rem;
+    border-radius: .5rem;
+    margin-top: .4rem;
+    display: flex;
+    align-items: center;
+    gap: .6rem;
+    display: none;
+}
+
+.error-icon {
+    transform: translateY(2px);
 }
 
 input[type="submit"] {
@@ -182,12 +202,16 @@ input[type="email"]:focus {
     align-items: center;
 }
 
+.terms-label {
+    margin-bottom: 0;
+}
+
 input[type="checkbox"] {
     width: 20px;
     height: 20px;
     border-radius: .5rem;
     cursor: pointer;
-    transform: translateY(5px);
+    accent-color: #2B7A78;
 }
 
 .login-link {
@@ -200,7 +224,7 @@ input[type="checkbox"] {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
 
 .terms label {
@@ -209,7 +233,6 @@ input[type="checkbox"] {
 
 .signin-link {
     font-size: .95rem;
-    margin-top: -.5rem;
 }
 
 h4 {
