--- a/Reset/reset.css
+++ b/Reset/reset.css
@@ -29,7 +29,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3rem 0;
+    padding: 2rem 0 1.5rem;
 }
 
 header {
@@ -106,7 +106,6 @@ input {
     border-radius: .5rem;
     font-size: 1.125rem;
     color: #272727;
-    margin-bottom: 1rem;
     font-family: 'Mulish',
         sans-serif;
     outline: none;
@@ -135,6 +134,23 @@ input[type="password"]:focus {
     cursor: pointer;
 }
 
+.error-message {
+    background: #F9C3B4;
+    color: #ED4A1F;
+    font-size: .95rem;
+    padding: .3rem .9rem;
+    border-radius: .5rem;
+    margin-top: .4rem;
+    display: flex;
+    align-items: center;
+    gap: .6rem;
+    display: none;
+}
+
+.error-icon {
+    transform: translateY(2px);
+}
+
 input[type="submit"] {
     background: #2B7A78;
     color: #FEFEFE;
@@ -145,6 +161,7 @@ input[type="submit"] {
     cursor: pointer;
     text-align: center;
     font-weight: 600;
+    margin: 1rem 0 1rem;
 }
 
 .login-link {
