--- a/forgot.css
+++ b/forgot.css
@@ -36,6 +36,38 @@ header {
     margin-top: 2rem;
 }
 
+header button {
+    color: #2B7A78;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+button {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-family: 'Mulish',
+        sans-serif;
+    font-size: 1.125rem;
+    font-weight: 600;
+    background: none;
+    border: 1px solid #2B7A78;
+    color: #F5F5F5;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    transition: all 0.25s linear;
+}
+
+header button:hover {
+    background: #2B7A78;
+    color: #F5F5F5;
+}
+
 .container {
     width: 90%;
     max-width: 1200px;
@@ -133,6 +165,7 @@ input[type="email"]:focus {
     display: flex;
     align-items: center;
     gap: .6rem;
+    text-align: left;
     display: none;
 }
 
