changed border radius for profile cards

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -614,6 +614,7 @@ input[type="checkbox"] {
     height: 160px;
     display: flex;
     justify-content: space-between;
+    border-radius: 15px;
 }
 
 .star {
